--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <font color="red">Byle jaki</font>
     <font color="blue">Byle jaki</font>
-
+    <font color="green">Zielony</font>
 </body>
 </html>
