--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <font color="red">Byle jaki</font>
     <font color="blue">Byle jaki</font>
     <font color="green">Zielony</font>
+    <font color="yellow">Żółty</font>
+
 </body>
 </html>
