--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <font color="red">Byle jaki</font>
-    <font color="blue">Byle jaki</font>
+    <font color="red">Czerwony/font>
+    <font color="blue">Niebieski</font>
     <font color="green">Zielony</font>
     <font color="yellow">Żółty</font>
 
