--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <font color="red">Czerwony/font>
+    <font color="red">Czerwony</font>
     <font color="blue">Niebieski</font>
     <font color="green">Zielony</font>
     <font color="yellow">Żółty</font>
